(executable
 (name minimal)
 (modules minimal)
 (modes byte exe)
 (libraries notty notty.unix nottui))

(executable
 (name misc)
 (modules misc)
 (modes byte exe)
 (libraries notty notty.unix nottui))

(executable
 (name reranger)
 (modules reranger)
 (modes byte exe)
 (libraries notty notty.unix nottui))

(executable
 (name stress)
 (modules stress)
 (modes byte exe)
 (libraries notty notty.unix nottui))

(executable
 (name pretty)
 (modules pretty)
 (modes byte exe)
 (libraries nottui-pretty notty notty.unix nottui))
