(executable
 (name minimal)
 (modules minimal)
 (modes byte exe)
 (libraries nottui nottui-unix))

(executable
 (name misc)
 (modules misc)
 (modes byte exe)
 (libraries nottui nottui-unix))

(executable
 (name reranger)
 (modules reranger)
 (modes byte exe)
 (libraries nottui nottui-unix))

(executable
 (name stress)
 (modules stress)
 (modes byte exe)
 (libraries nottui nottui-unix))

(executable
 (name pretty)
 (modules pretty)
 (modes byte exe)
 (libraries nottui nottui-unix nottui-pretty))

(executable
 (name long)
 (modules long)
 (modes byte exe)
 (libraries lwd))
