(library 
  (name lwd) 
  (public_name lwd)
  (modules lwd lwd_seq lwd_table lwd_infix lwd_utils) 
  (libraries seq)
  (inline_tests (backend qtest.lib))
  (wrapped false)
  (preprocess (per_module 
                ; use full to path to pp.exe to work around
                ; https://github.com/ocaml/dune/issues/6106
               ((action (run lib/lwd/pp.exe %{input-file})) lwd_infix lwd_seq))))

(executable 
  (name pp)
  (modules pp))
